@startuml

allowmixing

title configureDCR

class IFSystem {
  + IFPaths ifPaths
  + receiver
  + if1
  + centerFreq
  + tuningFreq
  + totalBW
  + velocity
  + vframe
  + vdef
}

class IFPaths {
   + [IFPath] paths
   + getFrontendFeeds(feed)
   + getFrontendNodes()
   + getBackendNodes()
   + getSortedBackendNodes(backend)
   + getMatchingPaths(start, end)
   + prunePathsForBackend(backend)
}

class IFPath {
   + [IFPathNode] path
   + getBackendNode()
   + getUniqueDeviceNode(device)
   + getFirstLikeDeviceNode(device)
   + aggregatePathBandpasses()
   + getBandpassUpToNode()
}

class IFPathNode {
  + name
  + device
  + deviceId
  + port
  + type
  + IFInfo ifInfo
  
}

class IFInfo {
  + Bandpasses bandpasses
  + filters
  + lo
}

class Bandpasses {
  + [Bandpass] bandpasses
  + Show()
}

class Bandpass {
  + lo
  + hi
  + bw
  + center
  + target
  + changes
  + mix(freq)
  + mixDown(freq)
  + mixUp(freq)
  + filter(lo, hi)
}

class Vdef {
  + freq_w_av_vel
  + v_high
  + v_low
  + compute_local_frame_w_vdef()
}

class MinMaxFreqs {
  + minf
  + maxf
  + bw
  + setMinMax(freq)
  + setMin(freq)
  + setMax(freq)
  + avgFreqs()
  + computeBW(bw)
}

class Manager {
  + params
}

class Receiver 
class IFRack
class LO1
class DCR
class ScanCoordinator


component configureDCR
component dbParams
component userConfigDict
component cablingPickleFile
component StaticDefs


Manager <|-- Receiver
Manager <|-- LO1
Manager <|-- IFRack
Manager <|-- ScanCoordinator
Manager <|-- DCR

IFSystem *-- IFPaths
IFPaths "1" *-- "n" IFPath
IFPath "1" *-- "n" IFPathNode
IFPathNode *-- IFInfo
IFInfo *-- Bandpasses
Bandpasses "1" *-- "n" Bandpass
Receiver ..> StaticDefs: uses
IFRack ..> StaticDefs: uses
LO1 ..> StaticDefs: uses

configureDCR ..> dbParams: uses
configureDCR ..> IFSystem: uses
configureDCR ..> Manager: uses
configureDCR ..> Vdef: uses
configureDCR ..> MinMaxFreqs: uses
configureDCR ..> StaticDefs: uses
userConfigDict ..> configureDCR: takes
cablingPickleFile ..> configureDCR: takes

@enduml